<resources>
    <string name="app_name">Dashboard</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="transfer">Transfer</string>
    <string name="you_have">You Have</string>
    <string name="account_balance_amount">SGD 21,421.33</string>
    <string name="account_no">Account No</string>
    <string name="date">6 Sep 2021</string>
    <string name="donald_trump">Donald Trump</string>
    <string name="dashboard">Dashboard</string>
    <string name="account_holder">Account Holder</string>
    <string name="transactions_title">Your transaction history</string>
</resources>