<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/user_name"
        app:layout_constraintLeft_toRightOf="@id/glLeft"
        app:layout_constraintRight_toLeftOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/glTop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:layout_constraintLeft_toRightOf="@id/glLeft"
        app:layout_constraintRight_toLeftOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/tilUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintLeft_toRightOf="@id/glLeft"
        app:layout_constraintRight_toLeftOf="@id/glRight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/glBottom"
        app:layout_constraintLeft_toRightOf="@id/glLeft"
        app:layout_constraintRight_toLeftOf="@id/glRight"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>