<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".dashboard.view.activity.DashboardActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHalfWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccountInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/glHalfWidth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glCvTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glCvBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glCvLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glCvRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/tvTitleBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/you_have"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"
                app:layout_constraintRight_toLeftOf="@id/glCvRight"
                app:layout_constraintTop_toBottomOf="@id/glCvTop" />

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"
                app:layout_constraintRight_toLeftOf="@id/glCvRight"

                app:layout_constraintTop_toBottomOf="@id/tvTitleBalance"
                tools:text="@string/account_balance_amount" />

            <TextView
                android:id="@+id/tvAccountNumberTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/account_no"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"

                app:layout_constraintRight_toLeftOf="@id/glCvRight"
                app:layout_constraintTop_toBottomOf="@id/tvBalance" />

            <TextView
                android:id="@+id/tvAccountNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"

                app:layout_constraintRight_toLeftOf="@id/glCvRight"
                app:layout_constraintTop_toBottomOf="@id/tvAccountNumberTitle"
                tools:text="3213-321-9923" />

            <TextView
                android:id="@+id/tvAccountHolderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/account_holder"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"

                app:layout_constraintRight_toLeftOf="@id/glCvRight"
                app:layout_constraintTop_toBottomOf="@id/tvAccountNumber" />

            <TextView
                android:id="@+id/tvAccountHolderName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/glCvBottom"
                app:layout_constraintLeft_toRightOf="@id/glCvLeft"
                app:layout_constraintRight_toLeftOf="@id/glCvRight"
                app:layout_constraintTop_toBottomOf="@id/tvAccountHolderTitle"
                tools:text="@string/donald_trump" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMakeTransfer"
        app:layout_constraintLeft_toLeftOf="@id/glLeft"
        app:layout_constraintRight_toRightOf="@id/glRight"
        app:layout_constraintTop_toBottomOf="@id/cvAccountInfo"
        tools:listitem="@layout/item_day_transactions" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMakeTransfer"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/make_transfer"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/glBottom"
        app:layout_constraintLeft_toRightOf="@id/glLeft"
        app:layout_constraintRight_toLeftOf="@id/glRight" />

</androidx.constraintlayout.widget.ConstraintLayout>
